Fri May  6 23:13:43 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: remove nanosleep check. we no longer use it.
	r20124 removed last usage.

Fri May  6 22:35:56 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (mktime_do): extra digits are not used.

Fri May  6 17:43:07 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/syck/rubyext.c (mktime_do): remove unused variable offset.

	* ext/syck/syck.h: use #ifdef instead of #if DEBUG.

Fri May  6 16:27:33 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/date_core.c (DAY_IN_NANOSECONDS): refix: 31438.
	  check with LONG_MAX and cast as long; without this the calculation
	  will be done as int and overflow.

Fri May  6 15:01:11 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/syck/rubyext.c (mktime_do): avoid buffer overrun, by
	  silently ignoring lesser significant digits.  Required buffer
	  length can be computable so you might at first think of
	  allocating enough memory space on the fly using alloca().  That
	  is a wrong idea because when using alloca there is always risk
	  of integer overflow.  A function that accepts outer-process
	  resources like this should not blindly trust its inputs.  In
	  this particular case we just want to generate miliseconds
	  resolution by strtod() so the string in question needs no more
	  length than what we originally have.  Ignoring lesser
	  significant digits should suffice I believe.

Fri May  6 14:25:53 2011  Tinco Andringa <mail@tinco.nl>

	* ext/syck/rubyext.c (mktime_do): YAML.load time correctly parse
	  usecs smaller than 1 fixes #4571

Thu May  5 23:08:32 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_io.rb (TestIO#test_O_CLOEXEC): fix false positive
	  detection.

Thu May  5 22:23:34 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (native_mutex_reinitialize_atfork): removed
	  unused macro.
	* thread_win32.c (native_mutex_reinitialize_atfork): ditto.
